infra/base/secure-aks-baseline/aad-pod-identity.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: aad-pod-identity-nmi
  namespace: cluster-baseline-settings
  labels:
    app.kubernetes.io/name: aad-pod-identity
    app.kubernetes.io/instance: aad-pod-identity
    app.kubernetes.io/component: nmi
    tier: node
  annotations:
    description: Deploy components for aad-pod-identity
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: aad-pod-identity
      app.kubernetes.io/instance: aad-pod-identity
      app.kubernetes.io/component: nmi
      tier: node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aad-pod-identity
        app.kubernetes.io/instance: aad-pod-identity
        app.kubernetes.io/component: nmi
        tier: node
    spec:
      serviceAccountName: aad-pod-identity-nmi
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
      - hostPath:
          path: /run/xtables.lock
          type: FileOrCreate
        name: iptableslock
      - hostPath:
          path: /etc/default/kubelet
        name: kubelet-config
      containers:
      - name: nmi
        image: "mcr.microsoft.com/oss/azure/aad-pod-identity/nmi:v1.7.0"
        imagePullPolicy: Always
        args:
          - "--node=$(NODE_NAME)"
          - "--http-probe-port=8085"
        securityContext:
          runAsUser: 0
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - mountPath: /run/xtables.lock
          name: iptableslock
        - mountPath: /etc/default/kubelet
          name: kubelet-config
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8085
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aad-pod-identity-mic
  namespace: cluster-baseline-settings
  labels:
    app.kubernetes.io/name: aad-pod-identity
    app.kubernetes.io/instance: aad-pod-identity
    app.kubernetes.io/component: mic
  annotations:
    description: Deploy components for aad-pod-identity
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: aad-pod-identity
      app.kubernetes.io/instance: aad-pod-identity
      app.kubernetes.io/component: mic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aad-pod-identity
        app.kubernetes.io/instance: aad-pod-identity
        app.kubernetes.io/component: mic
    spec:
      serviceAccountName: aad-pod-identity-mic
      containers:
      - name: mic
        image: "mcr.microsoft.com/oss/azure/aad-pod-identity/mic:v1.7.0"
        imagePullPolicy: Always
        args:
          - "--cloudconfig=/etc/kubernetes/azure.json"
          - "--logtostderr"
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: k8s-azure-file
          mountPath: /etc/kubernetes/azure.json
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 256Mi
      volumes:
      - name: k8s-azure-file
        hostPath:
          path: /etc/kubernetes/azure.json
      nodeSelector:
        kubernetes.io/os: linux
