infra/base/secure-aks-baseline/kured-1.4.0-dockerhub.yaml
# https://github.com/weaveworks/kured/releases/download/1.4.0/kured-1.4.0-dockerhub.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kured
  namespace: cluster-baseline-settings
spec:
  selector:
    matchLabels:
      name: kured
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: kured
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: kured
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      hostPID: true
      restartPolicy: Always
      containers:
        - name: kured
          # PRODUCTION READINESS CHANGE REQUIRED
          # This image should be sourced from a non-public container registry, such as the
          # one deployed along side of this reference implementation.
          # az acr import --source docker.io/weaveworks/kured:1.4.0 -n <your-acr-instance-name>
          # and then set this to
          # image: <your-acr-instance-name>.azurecr.io/weaveworks/kured:1.4.0
          image: docker.io/weaveworks/kured:1.4.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          command:
            - /usr/bin/kured
            - --ds-namespace=cluster-baseline-settings
