infra/base/secure-aks-baseline/traefik.yaml
# Update <KEY-VAULT-NAME> with the name of the key vault storing TLS certificate for AKS ingress controller
# See https://github.com/mspnp/aks-secure-baseline/blob/main/07-workload-prerequisites.md#import-the-wildcard-certificate-for-the-aks-ingress-controller-to-azure-key-vault
# and https://azure.github.io/secrets-store-csi-driver-provider-azure/configurations/identity-access-modes/pod-identity-mode/ for the details 
# Update <TENANT-ID>
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: cluster-baseline-settings
  labels:
    app.kubernetes.io/name: traefik-ingress-ilb
    app.kubernetes.io/instance: traefik-ingress-ilb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "snet-clusteringressservices"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.240.4.4
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: traefik-ingress-ilb
    app.kubernetes.io/instance: traefik-ingress-ilb
  ports:
  - port: 443
    name: https
    targetPort: websecure
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  namespace: cluster-baseline-settings
  labels:
    app.kubernetes.io/name: traefik-ingress-ilb
    app.kubernetes.io/instance: traefik-ingress-ilb
    aadpodidbinding: capi-identity
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik-ingress-ilb
      app.kubernetes.io/instance: traefik-ingress-ilb
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8082"
      labels:
        app.kubernetes.io/name: traefik-ingress-ilb
        app.kubernetes.io/instance: traefik-ingress-ilb
        aadpodidbinding: capi-identity
    spec:
      hostNetwork: false
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - traefik-ingress-ilb
            topologyKey: "kubernetes.io/hostname"
      containers:
        # PRODUCTION READINESS CHANGE REQUIRED
        # This image should be sourced from a non-public container registry, such as the
        # one deployed along side of this reference implementation.
        # az acr import --source docker.io/library/traefik:2.2.1 -n <your-acr-instance-name>
        # and then set this to
        # image: <your-acr-instance-name>.azurecr.io/library/traefik:2.2.1
      - image: docker.io/library/traefik:2.2.1
        name: traefik-ingress-controller
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /ping
            port: "traefik"
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /ping
            port: "traefik"
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        ports:
        - name: "traefik"
          containerPort: 9000
          protocol: TCP
        - name: "websecure"
          containerPort: 8443
          protocol: TCP
        - name: "metrics"
          containerPort: 8082
          protocol: TCP
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
        volumeMounts:
          - name: data
            mountPath: /data
          - name: config
            mountPath: /config
            readOnly: true
          - name: ssl-csi
            mountPath: /certs
            readOnly: true
        args:
        - --configfile=/config/traefik.toml
      volumes:
        - name: config
          configMap:
            name: traefik-ingress-config
        - name: ssl-csi
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: tls-secret-csi-akv
        - name: data
          emptyDir: {}
